Changed links to other pages on every page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,8 @@
 <body>
   {{> header}}
   <p>{{allCAPS welcomeMessage}}</p>
-
+  <p><a href="/about">About Page</a></p>
+  <p><a href="/help.html">Help Page</a></p>
   {{> footer}}
 </body>
 </html>
