Fix broken links to site's other pages

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
 <body>
   {{> header}}
   <p>Lorem ipsum dolor sit amet = localhost:3000/about</p>
-  <p><a href="/">Home</a></p>
+  <p><a href="/">Home Page</a></p>
   <p><a href="/help.html">Help Page</a></p>
 
   {{> footer}}
