--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,9 +6,9 @@
   </head>
 <body>
   {{> header}}
-  <p>Lorem ipsum dolor sit amet = localhost:3000/about</p>
-  <p><a href="/">Home Page</a></p>
-  <p><a href="/help.html">Help Page</a></p>
+  <p>Lorem ipsum dolor sit amet</p>
+  <p><a href="/">Home Page</a> | <a href="/portfolio">Portfolio</a> | <a href="/help.html">Help Page</a></p>
+  <p></p>
 
   {{> footer}}
 </body>
