--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
 <body>
   {{> header}}
   <p>Lorem ipsum dolor sit amet</p>
-  <p><a href="/">Home Page</a> | <a href="/portfolio">Portfolio</a> | <a href="/help.html">Help Page</a></p>
+  <p><a href="/">Home Page</a> | <a href="/projects">Projects</a> | <a href="/help.html">Help Page</a></p>
   <p></p>
 
   {{> footer}}
