--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,8 +7,8 @@
 <body>
   {{> header}}
   <p>{{allCAPS welcomeMessage}}</p>
-  <div><img src="http://www.duckie.co.za/campsites/Phosphorescent-Beach.jpg"></div>
-  <p><a href="/about">About Page</a> | <a href="/portfolio">Portfolio</a> | <a href="/help.html">Help Page</a></p>
+  <div><img src="http://www.duckie.co.za/campsites/Unnamed-Wilderness-Beach-1100x428.jpg"></div>
+  <p><a href="/about">About Page</a> | <a href="/projects">Projects</a> | <a href="/help.html">Help Page</a></p>
   {{> footer}}
 </body>
 </html>
